modules/ballerina-core/src/test/resources/samples/parser/invalidSemantic/IncompatibleTypeBinOperation.bal
package samples.parser.invalidSemantic;

function main(string[] s) {
	int i;
	
	// Following line is invalid.
	i = 5 + true;
	
	reply m;
}
